Bug 132246 - Shapes with blur effect in an SVG aren't rendered correctly
Summary: Shapes with blur effect in an SVG aren't rendered correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.3.5.2 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:7.6.0 target:24.2.0 target:7.6...
Keywords: filter:svg
: 92032 97583 (view as bug list)
Depends on:
Blocks: SVG-Import SVG-filters
  Show dependency treegraph
 
Reported: 2020-04-19 10:06 UTC by Muhammad Rivan
Modified: 2024-05-28 15:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (deleted)
2023-05-29 10:28 UTC, Xisco Faulí
Details
sample file (485 bytes, image/svg+xml)
2023-05-29 10:33 UTC, Xisco Faulí
Details
sample 2 (342 bytes, image/svg+xml)
2023-05-29 10:34 UTC, Xisco Faulí
Details
sample 3 (3.17 KB, image/svg+xml)
2024-05-22 23:45 UTC, Philippos P
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammad Rivan 2020-04-19 10:06:41 UTC
Description:
Try to insert an SVG file with blurred shapes inside to LibreOffice Writer or Impress, and they aren't rendered correctly

Actual Results:
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No



Additional Info:
-
Comment 1 Heiko Tietze 2020-04-29 09:55:56 UTC
New about.svg has 

    <filter
       inkscape:collect="always"
       style="color-interpolation-filters:sRGB"
       id="filter9019-9-2-6-6-7-3-9-2-2-4-4-3-2-7-96"
       x="-0.066956781"
       width="1.1339136"
       y="-0.050537683"
       height="1.1010754">
      <feGaussianBlur
         inkscape:collect="always"
         stdDeviation="0.3347053"
         id="feGaussianBlur9021-1-88-1-2-8-5-0-71-6-3-9-1-1-9-78" />
    </filter>

SVG filter throws the warning

warn:svgio:88979:88979:svgio/source/svgreader/svgdocumenthandler.cxx:408: Unknown Base SvgToken <filter> (!)
warn:svgio:88979:88979:svgio/source/svgreader/svgdocumenthandler.cxx:408: Unknown Base SvgToken <feGaussianBlur> (!)
Comment 2 QA Administrators 2022-04-30 03:39:36 UTC Comment hidden (obsolete)
Comment 3 Xisco Faulí 2023-05-29 10:11:53 UTC
*** Bug 155530 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2023-05-29 10:28:43 UTC
Created attachment 187575 [details]
sample file
Comment 5 Xisco Faulí 2023-05-29 10:33:08 UTC
Created attachment 187576 [details]
sample file
Comment 6 Xisco Faulí 2023-05-29 10:33:23 UTC
The content of attachment 187575 [details] has been deleted
Comment 7 Xisco Faulí 2023-05-29 10:34:44 UTC
Created attachment 187577 [details]
sample 2
Comment 8 Xisco Faulí 2023-06-06 13:55:08 UTC
I think I know how to fix it
Comment 9 Commit Notification 2023-06-07 08:46:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a4a570222e1270fecf17fba2c35e96907a327dc1

related: tdf#132246: Add basic filter node

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-07 12:49:55 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/77354ba8695f66331bfc6cc3f5e3f2e9d15f1740

tdf#132246: add basic support for feGaussianBlur

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2023-06-07 12:53:38 UTC
basic support has been added in master/LibreOffice 7.6 so closing this issue.
For other filter related issues, please create a new ticket.
Comment 12 Commit Notification 2023-06-24 10:34:02 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75399b8aad6c0f0998b9d0a6eddb2e29f8bc114c

tdf#132246, tdf#155735: Add support for SourceAlpha

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-06-24 12:38:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/31a66dab1e7d39e2d2062442f41090c583466cc1

tdf#132246, tdf#155735: Add support for SourceAlpha

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-06-26 21:15:19 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9951ffedd6941234447b9655fbc49ed6ca4cc64c

Revert "tdf#132246, tdf#155735: Add support for SourceAlpha"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-06-27 11:39:57 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5e713ba80fcc7a4157cb7a7e7c3c3476c91f59d4

Revert "tdf#132246, tdf#155735: Add support for SourceAlpha"

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2023-07-03 10:38:36 UTC
*** Bug 97583 has been marked as a duplicate of this bug. ***
Comment 17 Xisco Faulí 2023-07-03 10:38:46 UTC
*** Bug 92032 has been marked as a duplicate of this bug. ***
Comment 18 Philippos P 2024-05-22 23:45:04 UTC
Created attachment 194283 [details]
sample 3

It may not be completely fixed. For example, in this file (sample 3), the blue circle looks slightly like a rhombus, and the green star disappears.

Tested on:

Version: 7.6.6.3 (X86_64) / LibreOffice Community
Build ID: 60(Build:3)
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-IE (en_IE.UTF-8); UI: en-US
Ubuntu package version: 4:7.6.6-0ubuntu0.23.10.1
Calc: threaded

Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (C.UTF-8); UI: en-US
24.2.3-1
Calc: threaded
Comment 19 Xisco Faulí 2024-05-23 07:40:36 UTC
Hello Philippos,
Please create a follow-up ticket.
Comment 20 Philippos P 2024-05-23 09:13:53 UTC
(In reply to Xisco Faulí from comment #19)
> Hello Philippos,
> Please create a follow-up ticket.

Hello, thank you for the followups. What shall I put in the title of the new ticket? (I thought it would be a duplicate because is still about feGaussianBlur, as even the circle in sample 2 looks like a bit like a diamond)
Comment 21 Philippos P 2024-05-28 15:10:32 UTC
(In reply to Xisco Faulí from comment #19)
> Hello Philippos,
> Please create a follow-up ticket.

Ok, I have created a separate ticket: https://bugs.documentfoundation.org/show_bug.cgi?id=161306
Thanks - Philippos