related: tdf#132246: Add basic filter node

Change-Id: Iff451c441f0fe2c2fd2a14db8214f7a7d554dd15
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152680
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>